# RenderX

./: .clang-format  .gitattributes  .gitignore  .gitmodules  BugLog.docx  CMakeLists.txt  CONTRIBUTING.md  CmakeLists.txt  DEBUG_PROFILING.md  LICENSE  PROFILING_COMPLETION_REPORT.md  PROFILING_DELIVERY.md  PROFILING_INDEX.md  PROFILING_QUICKSTART.md  PROFILING_USAGE_EXAMPLE.cpp  README.md  RenderX.json  RenderX_BugLogs.js  profile_statistics.txt  token.txt
.github/workflows/: c-cpp.yml
External_local/ProLog/: CMakeLists.txt
External_local/ProLog/Include/ProLog/: ProLog.h
External_local/ProLog/src/: ProLog.cpp  Viewer.cpp
External_local/glew-2.1.0/: glew.pc
Include/RenderX/: DebugProfiler.h  Flags.h  Log.h  RenderX.h  RenderXAPI.def  RenderXCommon.h  RenderXCore.h  RenderXTypes.h
Test/HelloCube/: CMakeLists.txt  HelloCube.cpp
Test/HelloCube/Shaders/: bsc.frag.spv
Test/HelloModels/: .clang-format  CMakeLists.txt  Compile.bat  Files.cpp  ModelRenderer.cpp  ModelRenderer.h  main.cpp  pbr.frag  pbr.vert  shadow.vert
Test/HelloTriangle/: CMakeLists.txt  CmakeLists.txt  Files.cpp  Files.h  HelloTriangle.cpp  Test.cpp
Test/HelloTriangle/Shaders/: Compile.bat  bsc.frag  bsc.frag.spv  bsc.vert  bsc.vert.spv
Test/Shaders/: Compile.bat  bsc.frag
src/Backend/OpenGL/: BufferGL.cpp  CommandListGL.cpp  CommonGL.cpp  CommonGL.h  FrameBufferGL.cpp  RenderPassGL.cpp  RenderXGL.cpp  RenderXGL.h  ShaderGL.cpp
src/Backend/Vulkan/: BufferVK.cpp  CommanListVK.cpp  CommandListVK.cpp  CommonVK.cpp  CommonVK.h  FrameBufferVK.cpp  Pipeline.cpp  RenderPassVK.cpp  RenderXVK.cpp  RenderXVK.h  SRG.cpp
src/OpenGL/: BufferGL.cpp  CommandListGL.cpp  CommonGL.h  FrameBufferGL.cpp  GL_Buffer.cpp  GL_CommandList.cpp  GL_Common.cpp  GL_Common.h  GL_FrameBuffer.cpp  GL_Pipeline.cpp  GL_RenderPass.cpp  GL_RenderX.cpp  GL_RenderX.h  GL_ResourceGroups.cpp  RenderPassGL.cpp  RenderXGL.cpp  RenderXGL.h  ShaderGL.cpp
src/RenderX/: Common.h  Core.h  DebugProfiler.h  Flags.h  Log.cpp  Log.h  RX_Common.h  RX_Core.h  RX_Flags.h  RX_Validation.cpp  RX_Validation.h  RenderX.cpp  RenderX.h  RenderXAPI.def  RenderXCommon.h  RenderXCore.cpp  RenderXCore.h  RenderXTypes.h
src/Vulkan/: BufferVK.cpp  CommandListVK.cpp  CommonVK.cpp  CommonVK.h  FrameBufferVK.cpp  Pipeline.cpp  RenderPassVK.cpp  RenderXVK.cpp  RenderXVK.h  ResourceGroupsVK.cpp  VK_Allocator.cpp  VK_Buffer.cpp  VK_CommandList.cpp  VK_Common.cpp  VK_Common.h  VK_Device.cpp  VK_FrameBuffer.cpp  VK_Instance.cpp  VK_Pipeline.cpp  VK_Queue.cpp  VK_RenderPass.cpp  VK_RenderX.cpp  VK_RenderX.h  VK_RenderXh  VK_ResourceGroups.cpp  VK_Resource_Bindings.cpp  VK_Staging.cpp  VK_Swapchain.cpp  VK_Texture.cpp
test/: CmakeLists.txt  Files.cpp  Test.cpp
